--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,10 +1,17 @@
 .home-nav{
+    position: sticky;
+    top: 0;
     background-color: #9BE7FF;
     text-align: right;
+    padding: 20px;
+
     
 }
 .petsy-nav{
-    text-align: left;
+    float: left;
+    text-decoration: none;
+    color: black;
+    
 }
 .nav-item{
     text-decoration: none;
@@ -12,5 +19,5 @@
     margin-right: 3em;
     text-align: right;
     cursor: pointer;
-    
+    color: black;
 }
