--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -7,11 +7,14 @@
 
     
 }
-.petsy-nav{
+.petsy-nav {
     float: left;
     text-decoration: none;
     color: black;
     
+}
+ul{
+   list-style-type: none; 
 }
 .nav-item{
     text-decoration: none;
@@ -21,3 +24,4 @@
     cursor: pointer;
     color: black;
 }
+
