--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -1,5 +1,6 @@
 .contact-top{
     text-align: center;
+    margin-top: 2%;
 }
 .send-msg{
     background-color: #9be7ff;
@@ -7,4 +8,18 @@
     padding: 1rem;
     border-radius: 10px;
     margin: 2%;
+}
+.contact-form{
+    margin-top: 3%;
+}
+input{
+    height: 30px;
+    width: 300px;
+    border-radius: 10px;
+
+}
+textarea{
+    width: 300px;
+    height: 100px;
+    border-radius: 10px;
 }
