--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -10,23 +10,41 @@
     margin: 2%;
 }
 .contact-form{
-    margin-top: 3%;
+    margin-top: 1%;
+    
 }
-input{
-    height: 30px;
-    width: 300px;
-    border-radius: 10px;
+.contact-form button{
+    font-size: 10px;
+}
+.contact-form input{
+    height: 20px;
+    width: 250px;
+    border-radius: 20px;
+    background-color: rgb(235, 233, 233);
+    border: none;
+    padding: 0.5rem;
 
 }
-textarea{
-    width: 300px;
+.contact-form input:focus{
+    outline: none;
+}
+.contact-form textarea{
+    width: 250px;
     height: 100px;
-    border-radius: 10px;
+    border-radius: 20px;
+    background-color: rgb(235, 233, 233);
+    border: none;
+    padding: 0.5rem;
+}
+.contact-form textarea:focus{
+    outline: none;
 }
 .contact-footer{
     background-color: black;
     color: white;
     text-align: center;
+    padding: 1rem;
+    
 }
 .contact-footer .column {
     float: left;
