--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -23,6 +23,7 @@
     background-color: rgb(235, 233, 233);
     border: none;
     padding: 0.5rem;
+    box-shadow: 2px 3px rgb(33, 33, 33);
 
 }
 .contact-form input:focus{
@@ -35,6 +36,7 @@
     background-color: rgb(235, 233, 233);
     border: none;
     padding: 0.5rem;
+    box-shadow: 2px 3px rgb(33, 33, 33);
 }
 .contact-form textarea:focus{
     outline: none;
