--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -1,3 +1,6 @@
+body{
+    overflow-x: hidden;
+}
 .contact-top{
     text-align: center;
     margin-top: 2%;
@@ -42,6 +45,9 @@
     outline: none;
 }
 .contact-footer{
+    position: fixed;
+    width: 100%;
+    bottom: 0;
     background-color: black;
     color: white;
     text-align: center;
