--- a/src/Styles/Whyus.css
+++ b/src/Styles/Whyus.css
@@ -6,12 +6,14 @@
     height: 70vh;
     padding: 2rem; 
 }
-.pet-owner{
+.img-mission{
     float: right;
-    width: 350px;
-    height: 400px;
-    text-align: right;
+    margin-left: 20%;
+}
+.pet-owner{
     
+    width: 300px;
+    height: 350px;
     
 }
 .mission{
@@ -26,8 +28,8 @@
 }
 .history-img{
     float: left;
-    width: 350px;
-    height: 400px;
+    width: 300px;
+    height: 350px;
     
     
 }
@@ -42,8 +44,8 @@
     align-items: center;
 }
 .hstry-text{
-    text-align: left;
-    float: right;
+   padding-left: 2rem;
+   float: right;
 }
 .team-container{
     align-items: center;
@@ -72,4 +74,13 @@
 .achieve{
     padding: 2rem;
     text-align: center;
+}
+.pets-container{
+    align-items: center;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+}
+.pet-image img{
+   
+    padding: 2rem;
 }
