--- a/src/Styles/ShopNavbar.css
+++ b/src/Styles/ShopNavbar.css
@@ -4,3 +4,15 @@
     background-color: #9be7ff;
     margin-top: 5%;
 }
+.sidenav{
+    padding: 1rem;
+}
+.sidenav-items{
+    list-style-type: none;
+    width: 100%;
+    padding: 0.5rem;
+    margin: 0%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
