--- a/src/Styles/ShopNavbar.css
+++ b/src/Styles/ShopNavbar.css
@@ -1,18 +1,28 @@
 .sidenav-container{
     height: 400px;
-    width: 250px;
+    width: 200px;
     background-color: #9be7ff;
     margin-top: 5%;
+    cursor: pointer;
 }
 .sidenav{
-    padding: 1rem;
+ padding-top: 1rem;
 }
 .sidenav-items{
     list-style-type: none;
     width: 100%;
-    padding: 0.5rem;
+    height: 50px;
     margin: 0%;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     align-items: center;
+}
+#icon{
+    flex: 30%;
+    display: grid;
+    place-items: center;
+}
+#title{
+    flex: 70%;
 }
