add hover effect to list items

--- a/src/Styles/ShopNavbar.css
+++ b/src/Styles/ShopNavbar.css
@@ -18,6 +18,9 @@
     justify-content: center;
     align-items: center;
 }
+.sidenav-items:hover{
+    background-color: white;
+}
 #icon{
     flex: 30%;
     display: grid;
