--- a/src/Styles/ShopNavbar.css
+++ b/src/Styles/ShopNavbar.css
@@ -5,6 +5,8 @@
     margin-top: 5%;
     cursor: pointer;
     position: sticky;
+    box-shadow: 10px 10px 20px  grey,
+    10px 10px 20px rgb(55, 55, 55);
 }
 .sidenav{
  padding-top: 1rem;
