--- a/src/Styles/ShopNavbar.css
+++ b/src/Styles/ShopNavbar.css
@@ -18,20 +18,15 @@
     margin: 0%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+   align-items: center;
+    
 }
 .sidenav-items:hover{
     background-color: rgb(235, 233, 233);
 }
-
-#icon{
-    flex: 10%;
-    display: grid;
-    place-items: center;
-    padding-right: 4px;
+.sidenav-title{
+    text-decoration: none;
+    color: black;
     
 }
-#title{
-    flex: 90%;
-}
+
